force-app/main/default/objects/NSWCPPCallingSystem__mdt/NSWCPPCallingSystem__mdt.object-meta.xml
<CustomObject>
    <description>Metadata used to associate a Salesforce domain name to a NSW CPP Calling System reference.</description>
    <label>NSW CPP Calling System</label>
    <pluralLabel>NSW CPP Calling Systems</pluralLabel>
</CustomObject>