force-app/main/default/objects/NSWCPPCallingSystem__mdt/fields/NamedCredentials__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentials__c</fullName>
    <label>Named Credentials</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>