force-app/main/default/objects/NSWCPPCallingSystem__mdt/fields/PaymentURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentURL__c</fullName>
    <label>Payment URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>